cluster/apps/networking/traefik/external-services/rpicam1.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: rpicam1
  namespace: networking
spec:
  type: ExternalName
  ports:
    - name: https
      port: 443
      targetPort: 80
  externalName: "${RPI_CAM_1_IP_ADDR}"
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rpicam1
  namespace: networking
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    kubernetes.io/ingress.class: traefik
    traefik.frontend.passHostHeader: "false"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-internal-only@kubernetescrd"
    hajimari.io/enable: "true"
    hajimari.io/icon: "cctv"
spec:
  tls:
    - hosts:
        - "rpicam1.${SECRET_DOMAIN}"
      secretName: "rpicam1-tls"
  rules:
    - host: rpicam1.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            backend:
              serviceName: rpicam1
              servicePort: https
