cluster/apps/networking/traefik/external-services/rpicam2.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rpicam2
  namespace: home
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "cctv"
    hajimari.io/group: home

    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-internal-only@kubernetescrd"

spec:
  ingressClassName: traefik
  rules:
    - host: &host "rpicam2.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: rpicam2
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host

---
apiVersion: v1
kind: Service
metadata:
  name: rpicam2
  namespace: home
spec:
  ports:
    - name: http
      port: 80
  type: ExternalName
  externalName: ${SECRET_RPI_CAM_2_IP_ADDR}
